// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsCard should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm eWJHeF bg-theme-background"
    data-testid="ProfileCard"
  >
    <div
      class="flex flex-col p-4 space-y-8"
      data-testid="NewsCard"
    >
      <div
        class="flex justify-between w-full"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="sc-AxhUy bjgvrq border-theme-neutral-light text-theme-neutral"
            data-testid="NetworkIcon__placeholder"
          />
          <div>
            <h4
              class="text-lg font-semibold"
              data-testid="NewsCard__asset-undefined"
            />
            <div
              class="flex items-center space-x-4"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
                data-testid="NewsCard__author"
              >
                Travis Walker, 
              </p>
              <div
                class="sc-AxiKw hpWYLk border-theme-neutral-300"
                type="vertical"
              />
              <p
                class="text-sm font-semibold text-theme-neutral"
                data-testid="NewsCard__date-created"
              >
                <span
                  data-testid="timeago"
                >
                  A few seconds ago
                </span>
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col justify-end"
        >
          <div
            class="sc-AxhCb jwGgjn"
            color="warning"
          >
            <span
              class="text-sm"
              data-testid="NewsCard__category"
            >
              #Technical
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-AxiKw cFARgj border-theme-neutral-300"
        type="horizontal"
      />
      <p
        class="text-theme-neutral-dark"
        data-testid="NewsCard__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewsCard should render with cover image 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm eWJHeF bg-theme-background"
    data-testid="ProfileCard"
  >
    <div
      class="flex flex-col p-4 space-y-8"
      data-testid="NewsCard"
    >
      <div
        class="flex justify-between w-full"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="sc-AxhUy bjgvrq border-theme-neutral-light text-theme-neutral"
            data-testid="NetworkIcon__placeholder"
          />
          <div>
            <h4
              class="text-lg font-semibold"
              data-testid="NewsCard__asset-undefined"
            />
            <div
              class="flex items-center space-x-4"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
                data-testid="NewsCard__author"
              >
                Travis Walker, 
              </p>
              <div
                class="sc-AxiKw hpWYLk border-theme-neutral-300"
                type="vertical"
              />
              <p
                class="text-sm font-semibold text-theme-neutral"
                data-testid="NewsCard__date-created"
              >
                <span
                  data-testid="timeago"
                >
                  A few seconds ago
                </span>
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col justify-end"
        >
          <div
            class="sc-AxhCb jwGgjn"
            color="warning"
          >
            <span
              class="text-sm"
              data-testid="NewsCard__category"
            >
              #Technical
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-AxiKw cFARgj border-theme-neutral-300"
        type="horizontal"
      />
      <p
        class="text-theme-neutral-dark"
        data-testid="NewsCard__content"
      />
      <div
        class="flex justify-center p-1 -mx-10 border-t-2 border-theme-primary-contrast"
      >
        <img
          alt="ARK Banner"
          src="https://miro.medium.com/max/1000/1*vMM0Z7qfGgA8a8NRhB_ZQA.png"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
